Fixed Story Descriptions not showing

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -121,16 +121,12 @@ input {
 // }
 
 
-// #signup, #login {
-//   height: 100%;
-//   background-image: url('../images/signup.jpg');
-//   background-size: cover;
-//   background-repeat: no-repeat;
-//   background-position-y: center;
-//   height: 100%;
-//   color: white;
-//   text-shadow: 1px 1px rgb(106, 108, 112);
-// }
+#signup, #login {
+  justify-content: center;
+  text-align: center;
+  padding: 200px 0px;
+  background-color: #F0F0F2;
+}
 
 // #signup h1, #login h1, .benefits {
 //   padding-top: 50px;
@@ -150,5 +146,9 @@ input {
   text-indent: 20px;
 }
 
+.noStyle {
+  list-style-type: none;
+  text-indent: 20px;
+}
 
 
